<resources>
    <string name="app_name">MyAppPortfolio</string>
    <string name="toolbar_title">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="btn_popular_txt">POPULAR MOVIES</string>
    <string name="btn_stock_hawk_test">STOCK HAWK</string>
    <string name="btn_build_it_txt">BUILD IT BIGGER</string>
    <string name="btn_make_ur_app">MAKE YOUR APP MATERIAL</string>
    <string name="btn_go_ubiquitous">GO UBIQUITOUS</string>
    <string name="btn_capstone">CAPSTONE</string>
    <string name="main_screen_title">My Nanodegree Apps!</string>
</resources>
