<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_very_large_margin"
    android:paddingRight="@dimen/activity_very_large_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.udacity.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/TxtMainScreentitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_large_margin"
        android:gravity="center"
        android:text="@string/main_screen_title"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
    <Button
        android:id="@+id/btnPopularMovie"
        android:layout_below="@id/TxtMainScreentitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_large_margin"
        android:gravity="center"
        android:text="@string/btn_popular_txt"
        android:textColor="@color/btn_txt_color"
        android:textStyle="bold"
        android:background="@color/btn_background_color"
        android:paddingLeft="@dimen/activity_large_margin"
        android:paddingRight="@dimen/activity_large_margin"/>
    <Button
        android:id="@+id/btnStockHawk"
        android:layout_below="@id/btnPopularMovie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_large_margin"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/btn_stock_hawk_test"
        android:textColor="@color/btn_txt_color"
        android:textStyle="bold"
        android:background="@color/btn_background_color"
        android:paddingLeft="@dimen/activity_large_margin"
        android:paddingRight="@dimen/activity_large_margin"
        android:paddingBottom="@dimen/activity_small_margin"
        android:paddingTop="@dimen/activity_small_margin"/>
    <Button
        android:id="@+id/btnBuildItBigger"
        android:layout_below="@id/btnStockHawk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_large_margin"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/btn_build_it_txt"
        android:textColor="@color/btn_txt_color"
        android:textStyle="bold"
        android:background="@color/btn_background_color"
        android:paddingLeft="@dimen/activity_large_margin"
        android:paddingRight="@dimen/activity_large_margin"
        android:paddingBottom="@dimen/activity_small_margin"
        android:paddingTop="@dimen/activity_small_margin"/>
    <Button
        android:id="@+id/btnAppMaterila"
        android:layout_below="@id/btnBuildItBigger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_large_margin"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/btn_make_ur_app"
        android:textColor="@color/btn_txt_color"
        android:textStyle="bold"
        android:background="@color/btn_background_color"
        android:paddingLeft="@dimen/activity_large_margin"
        android:paddingRight="@dimen/activity_large_margin"
        android:paddingBottom="@dimen/activity_small_margin"
        android:paddingTop="@dimen/activity_small_margin"/>
    <Button
        android:id="@+id/btnGoUbiquitous"
        android:layout_below="@id/btnAppMaterila"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_large_margin"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/btn_go_ubiquitous"
        android:textColor="@color/btn_txt_color"
        android:textStyle="bold"
        android:background="@color/btn_background_color"
        android:paddingLeft="@dimen/activity_large_margin"
        android:paddingRight="@dimen/activity_large_margin"
        android:paddingBottom="@dimen/activity_small_margin"
        android:paddingTop="@dimen/activity_small_margin"/>
    <Button
        android:id="@+id/btnCapstone"
        android:layout_below="@id/btnGoUbiquitous"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_large_margin"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/btn_capstone"
        android:textColor="@color/btn_txt_color"
        android:textStyle="bold"
        android:background="@color/btn_background_color"
        android:paddingLeft="@dimen/activity_large_margin"
        android:paddingRight="@dimen/activity_large_margin"
        android:paddingBottom="@dimen/activity_small_margin"
        android:paddingTop="@dimen/activity_small_margin"/>

</RelativeLayout>
